name: hashring
version: 0.0.0
cabal-version: >= 1.6
build-type: Simple

library
    exposed-modules:
        Data.HashRing
    ghc-options: -Wall -O2
    build-depends:
        base >= 4 && < 5,
        containers,
        hashable

--library
--    exposed-modules:
--        Test
--    ghc-options: -Wall -O2
--    build-depends:
--        base >= 4 && < 5,
--        bytestring,
--        cryptohash,
--        hashable
